# ocr-credential-detector

./: .gitattributes  Cargo.toml  LICENSE  README.ja.md  README.md
designs/: doc_0001.md
examples/: basic_detection.rs  batch_processing.rs  custom_detector.rs
src/: detector.rs  error.rs  lib.rs  types.rs
src/detectors/: api_key.rs  mod.rs  password.rs
src/ocr/: engine.rs  mod.rs
